--- a/jenkins/requirements.txt
+++ b/jenkins/requirements.txt
@@ -1,12 +1,17 @@
+attrs==20.3.0
 certifi==2020.6.20
 chardet==3.0.4
+couchbase==3.0.6
 deepdiff==5.0.2
 idna==2.10
 multi-key-dict==2.0.3
+mypy-extensions==0.4.3
 ordered-set==4.0.2
 pbr==5.5.1
+pyrsistent==0.17.3
 python-jenkins==1.7.0
 pytz==2020.1
 requests==2.24.0
 six==1.15.0
 urllib3==1.25.11
+wrapt==1.12.1
