fixed according to PR reviews

--- a/transaction-performer/pom.xml
+++ b/transaction-performer/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.couchbase</groupId>
     <artifactId>transaction</artifactId>
-    <version>syncgateway</version>
+    <version>performer</version>
     <repositories>
   <repository>
     <id>couchbase</id>
