--- a/dashboards/docker/staging/docker-compose.yml
+++ b/dashboards/docker/staging/docker-compose.yml
@@ -19,14 +19,20 @@ services:
       GF_INSTALL_PLUGINS: "simpod-json-datasource,marcusolsson-csv-datasource,ae3e-plotly-panel"
       GF_AUTH_ANONYMOUS_ENABLED: "true"
       GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: "ae3e-plotly-panel"
+      GF_RENDERING_SERVER_URL: http://renderer:8081/render
+      GF_RENDERING_CALLBACK_URL: http://grafana:3000/
     ports:
       - 4000:3000
+
+  renderer:
+    image: grafana/grafana-image-renderer:latest
 
   prometheus:
     restart: unless-stopped
     image: prom/prometheus
     volumes:
-      - ./config/prometheus:/etc/prometheus
+      - ./config/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./config/alert.rules.yml:/etc/prometheus/alert.rules.yml
 
   exporter:
     restart: unless-stopped
@@ -34,3 +40,11 @@ services:
     volumes:
       - ./config/queries.json:/app/queries.json
     mem_limit: 100M
+
+  alertmanager:
+    restart: unless-stopped
+    image: prom/alertmanager
+    ports:
+      - 9093:9093
+    volumes:
+      - ./config/alertmanager.yml:/etc/alertmanager/alertmanager.yml
