--- a/dashboards/docker/staging/config/alertmanager.yml
+++ b/dashboards/docker/staging/config/alertmanager.yml
@@ -14,4 +14,4 @@ receivers:
   - name: "email"
     email_configs:
       - to: jake.rawsthorne@couchbase.com,jagadesh.munta@couchbase.com
-      - html: '{{ template "email.ssh_failed.html" }}
+        html: '{{ template "email.ssh_failed.html" }}
