SSH response time and booted days

--- a/dashboards/docker/staging/config/alert.rules.yml
+++ b/dashboards/docker/staging/config/alert.rules.yml
@@ -38,8 +38,24 @@ groups:
         expr: vm_health_os_match_state == 0
         for: 1m
         annotations:
-          title: "Pool VM {{ $labels.slave_ip }} OS mismatch"
-          description: "{{ $labels.slave_ip }} expected {{ $labels.pool_os }}, got {{ $labels.real_os }}"
+          title: "Pool VM {{ $labels.ipaddr }} OS mismatch"
+          description: "{{ $labels.ipaddr }} expected {{ $labels.pool_os }}, got {{ $labels.real_os }}"
+        labels:
+          severity: "critical"
+      - alert: PoolVMOverdueReboot
+        expr: vm_health_booted_days > 60
+        for: 1m
+        annotations:
+          title: "Pool VM {{ $labels.ipaddr }} overdue reboot"
+          description: "{{ $labels.ipaddr }} was last rebooted {{ $value }} days ago"
+        labels:
+          severity: "critical"
+      - alert: PoolVMSlowSSHResponseTime
+        expr: vm_health_ssh_resp_time > 10
+        for: 1m
+        annotations:
+          title: "Pool VM {{ $labels.ipaddr }} slow SSH response time"
+          description: "{{ $labels.ipaddr }} took {{ $value }} seconds to SSH"
         labels:
           severity: "critical"
       - alert: SlaveVMDown
