--- a/dashboards/docker/production/config/prometheus.yml
+++ b/dashboards/docker/production/config/prometheus.yml
@@ -1,8 +1,8 @@
 # my global config
 global:
-    scrape_interval: 15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
-    evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
-    # scrape_timeout is set to the global default (10s).
+    scrape_interval: 1m # Set the scrape interval to every 15 seconds. Default is every 1 minute.
+    scrape_timeout: 30s
+    # evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
   
   # Alertmanager configuration
   alerting:
