--- a/dashboards/docker/staging/config/alertmanager.yml
+++ b/dashboards/docker/staging/config/alertmanager.yml
@@ -8,10 +8,14 @@ route:
   group_wait: 10s
   group_interval: 10s
   repeat_interval: 24h
-  receiver: "email"
+  receiver: "qe-infra-email"
+  matchers:
+   - alertname =~ PoolVMDown|PoolVMOSMismatch
 
 receivers:
+  - name: "qe-infra-email"
+    email_configs:
+      - to: qe-infra@couchbase.com
   - name: "email"
     email_configs:
       - to: jake.rawsthorne@couchbase.com,jagadesh.munta@couchbase.com
-        html: '{{ template "email.ssh_failed.html" }}
