--- a/dashboards/docker/staging/config/alertmanager.yml
+++ b/dashboards/docker/staging/config/alertmanager.yml
@@ -8,9 +8,9 @@ route:
   group_wait: 10s
   group_interval: 10s
   repeat_interval: 24h
-  receiver: "qe-infra-email"
+  receiver: "email"
   matchers:
-   - alertname =~ PoolVMDown|PoolVMOSMismatch
+   - alertname =~ PoolVMOSMismatch
 
 receivers:
   - name: "qe-infra-email"
@@ -18,4 +18,4 @@ receivers:
       - to: qe-infra@couchbase.com
   - name: "email"
     email_configs:
-      - to: jake.rawsthorne@couchbase.com,jagadesh.munta@couchbase.com
+      - to: jake.rawsthorne@couchbase.com
