--- a/dashboards/docker/staging/config/alert.rules.yml
+++ b/dashboards/docker/staging/config/alert.rules.yml
@@ -10,7 +10,7 @@ groups:
         labels:
           severity: "critical"
       - alert: PoolVMHighDiskUsage
-        expr: disk_usage >= 99
+        expr: disk_usage >= 95
         for: 1m
         annotations:
           title: "Server Pool VM {{ $labels.ipaddr }} high disk usage"
@@ -18,7 +18,7 @@ groups:
         labels:
           severity: "critical"
       - alert: PoolVMHighMemUsage
-        expr: memory_usage >= 99
+        expr: memory_usage >= 95
         for: 1m
         annotations:
           title: "Server Pool VM {{ $labels.ipaddr }} high memory usage"
@@ -58,7 +58,7 @@ groups:
         labels:
           severity: "critical"
       - alert: SlaveVMHighDiskUsage
-        expr: slaves_vm_health_disk_usage >= 99
+        expr: slaves_vm_health_disk_usage >= 95
         for: 1m
         annotations:
           title: "Slave VM {{ $labels.slave_ip }} high disk usage"
@@ -66,10 +66,18 @@ groups:
         labels:
           severity: "critical"
       - alert: SlaveVMHighMemUsage
-        expr: slaves_vm_health_memory_usage >= 99
+        expr: slaves_vm_health_memory_usage >= 95
         for: 1m
         annotations:
           title: "Slave VM {{ $labels.slave_ip }} high memory usage"
           description: "{{ $labels.slave_ip }} has memory usage of {{ $value }}%"
+        labels:
+          severity: "critical"
+      - alert: SlaveVMHighDiskUsageData
+        expr: slaves_vm_health_disk_usage_data >= 95
+        for: 1m
+        annotations:
+          title: "Slave VM {{ $labels.slave_ip }} high disk usage on /data"
+          description: "{{ $labels.slave_ip }} has disk usage of {{ $value }}% on /data"
         labels:
           severity: "critical"
