--- a/ansible_setup/15-cluster-config.yml
+++ b/ansible_setup/15-cluster-config.yml
@@ -26,6 +26,9 @@
    - name: Config index setting
      shell: /opt/couchbase/bin/couchbase-cli setting-index -c 127.0.0.1:8091 -u {{ admin_user }} -p {{ admin_password }} --replicas 1 --optimize-placement 1 --index-storage-setting default
 
+   - name: FTS index bleveMaxResultWindow setting
+     shell: curl -X PUT -u {{ admin_user }}:{{ admin_password }} -H Content-Type:application/json http://127.0.0.1:8094/api/managerOptions -d {"bleveMaxResultWindow":"100000000"}
+     
    - name: Config indexer.settings.rebalance.redistribute_indexes
      uri:
        url: http://127.0.0.1:9102/settings
