fix for creating scope error : e2e

--- a/ansible_setup/21-e2eapp-bucket.yml
+++ b/ansible_setup/21-e2eapp-bucket.yml
@@ -12,7 +12,7 @@
   - name: create scope {{ item.scope_name }}
     shell: /opt/couchbase/bin/couchbase-cli collection-manage -c 127.0.0.1:8091 --bucket={{ item.bucket_name }} --create-scope {{ item.scope_name }} -u {{ admin_user }} -p {{ admin_password }}
     with_items:
-      - "{{ scope_collection }}"
+      - "{{ scopes }}"
 
   - name: create collection {{ item.collection }}
     shell: /opt/couchbase/bin/couchbase-cli collection-manage -c 127.0.0.1:8091 --bucket={{ item.bucket_name }} --create-collection {{ item.scope_name }}.{{ item.collection_name }} -u {{ admin_user }} -p {{ admin_password }}
